src/Comps/Header/MobileNavbar/MNavbar.css
.mobile-nav-submenu-container {
    flex-direction: column;
    position: absolute;
    top: 6rem;
    left: 4%;
    right: 4%;
    transform: translateX(150%);
    padding: 1rem;
    z-index: 99;
    background-color: #20262E;
    border-radius: 10px;
    border: 2px solid #F47658;
    transition: all 150ms ease-in-out;
}


.mobile-nav-submenu-container-active {
    transform: translateX(0%);
}

.mobile-nav-link {
    margin: 0.650rem 0;
    text-decoration: none;
    color: #E9E8E8;
    transition: color 150ms;
    font-weight: 700;
    display: flex;
    align-items: center;
}

.mobile-nav-link:visited {
    color: #E9E8E8
}

.mobile-nav-link-active {
    margin: 0.650rem 0;
    text-decoration: none;
    color: #e982ad;
    font-weight: 700;
    display: flex;
    align-items: center;
}

.mobile-nav-link i {
    margin-bottom: 0.100rem;
    margin-right: 0.400rem;
}

.mobile-nav-link-active i {
    margin-bottom: 0.100rem;
    margin-right: 0.400rem;
}



@media (min-width: 768px) {
    .mobile-nav-container {
        display: none;
    }

    .nav-icons-container {
        display: none;
    }
}

